--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "gulp-sourcemaps": "^3.0.0",
         "gulp-uglify-es": "^2.0.0",
         "smart-grid": "^2.1.2"
+    },
+    "dependencies": {
+        "jquery.maskedinput": "^1.4.1"
     }
 }
